added braintree to angular-fullstack using ngRouter instead of uiRouter

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -45,6 +45,8 @@
 /* Component styles are injected through gulp */
 /* inject:css */
 @import 'admin/admin.css';
+@import 'checkout/checkout.css';
+@import 'checkout/show/show.css';
 @import 'main/main.css';
 @import '../components/footer/footer.css';
 @import '../components/oauth-buttons/oauth-buttons.css';
